Fixed spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2088,7 +2088,7 @@
 		}
 
 			#nav ul li a.active span:before {
-				color: #47b2f0;
+				color: #45b0ee;
 			}
 
 /* Footer */
